Use immutable map for SEPARATORS static field in DefaultPathContainer
Signed-off-by: Patrick Strawderman <pstrawderman@netflix.com>